UI changes and fixed scrollbar on page transition

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,5 +4,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: fit-content;
+  margin: auto;
+  padding: 10px;
   /* background-color: #031926; */
  }
